# urfu-fresh-scanner

./: .dockerignore  .gitignore  Dockerfile  README.md  aiac.toml  deploy_agent.py  docker-compose.yml  logs.txt  main.py  pyproject.toml
bot/: config.py  handlers.py
model/: pyproject.toml  train.ipynb  train.py
runs/classify/train4/: args.yaml  results.csv
runs/classify/train4/weights/: best.pt  last.pt
telegram_bot/: Dockerfile  analyze_code.py  main.py  pyproject.toml
telegram_bot/bot/: classifier.py  config.py  handlers.py  middlewares.py
